# SpriteEngineUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE.txt  RUNME.sh  Readme.md  Readme.txt  s
Assets/: imgui.ini  (+3 more)
Editor/: CMakeLists.txt
Engine/: .gitattributes  .gitignore  CMakeLists.txt  Setup.sh  SpriteEngine.cpp  SpriteEngine.sln  SpriteEngine.vcxproj  SpriteEngine.vcxproj.filters  exclude_file.txt  imgui.ini  keyFrame.cpp  keyFrame.h
Engine/Core/: CMakeLists.txt
Engine/Core/Source/: Core.cpp  Core.h  Window.cpp  Window.h
Engine/Core/Source/Camera/: Camera.cpp  Camera.h
Engine/Core/Source/Core/: EngineData.cpp  EngineData.h  Event.cpp  Event.h  GameWindow.cpp  GameWindow.h  IApplication.h  Log.cpp  Log.h  Repository.h  SeceneHandler.cpp  SeceneHandler.h  Time.cpp  Time.h
Engine/Core/Source/Include/: UtilityFunctions.cpp  UtilityFunctions.h  icons.h
Engine/Core/Source/Input/: Input.cpp  Input.h
Engine/Core/Source/Math/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Engine/Core/Source/RessourceHandler/: FileDataMacros.h  Initializer.cpp  Initializer.h
Engine/Core/Source/Sprite/: Sprite.cpp  Sprite.h  SpriteRepository.cpp  SpriteRepository.h
Engine/Core/Source/Utility/: FileDialoge.cpp  FileDialoge.h  Style.cpp  Style.h
Engine/Editor/: CMakeLists.txt  Editor.cpp
Engine/Editor/Ressources/: todo.txt
Engine/Editor/Source/: Editor.cpp  Editor.h  FileDataMacros.h  Main.cpp  Savesystem.cpp  Savesystem.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Core/: CMakeLists.txt
Engine/Engine/Math/: CMakeLists.txt  Vector2.h  Vector3.cpp
Engine/Engine/Renderer2D/: CMakeLists.txt
Engine/Engine/Renderer3D/: CMakeLists.txt
Engine/EngineAssets/saves/: projects.txt
Engine/EngineAssets/template/: Assets.vcxproj  Assets.vcxproj.filters
Engine/EngineAssets/textFiles/: addingNewSpriteProp.txt  plan.txt
Engine/Framework/: CMakeLists.txt
Engine/Scripts/: Build.sh  CMake.sh  Setup.sh
Engine/Template/: .gitignore  CMakeLists.txt  RUNME.sh  Setup.bat  imgui.ini
Engine/Template/Assets/: Light_1.prfb  Player.prfb
Engine/Template/Source/: Game.cpp
Engine/ressources/: ThingsToAddToUser.txt  instructions.html  todo.txt
Engine/ressources/saves/: projects.txt
Engine/ressources/shaders/: circulaer_gradient.frag
Engine/ressources/template/: .gitignore  Assets.sln  Assets.vcxproj  Assets.vcxproj.filters  LICENSE  README.md  imgui.ini
Engine/ressources/textFiles/: imguibasics.txt
Engine/saves/: camera.txt  gameWindow.txt  index.txt  sprites.txt
Engine/saves/textFiles/: addToAssets.txt  boost..txt  wichtigecppsachen.txt
Engine/src/: SpriteEngine.cpp
Engine/src/animation/: animation.cpp  animation.h  animator.cpp  animator.h
Engine/src/calculationComponents/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
Engine/src/data/: UIDataModels.h  UIIconData.cpp  UIIconData.h  UIInfo.cpp  UIInfo.h  engineData.cpp  engineData.h  fileData.h  fileDataMacros.h  projectInfo.cpp  projectInfo.h  spriteData.cpp  spriteData.h
Engine/src/engineComponents/: event.cpp  event.h  gameEngine.cpp  gameEngine.h  input.h  renderer.cpp  renderer.h  stime.h  time.cpp
Engine/src/fileManager/: FileData.cpp  saveSystem.cpp  saveSystem.h
Engine/src/gameData/: event.h  fontManager.cpp  fontManager.h  gameEngine.cpp  gameEngine.h  input.cpp  input.h  spriteData.cpp  spriteData.h  time.cpp
Engine/src/gameObjects/: boxCollider.cpp  boxCollider.h  childSystem.cpp  childSystem.h  gameObject.cpp  gameObject.h  line.cpp  line.h  physicsBody.h  sprite.cpp  sprite.h  stransform.h  transform.cpp
Engine/src/gui/: UIInfo.cpp  UIInfo.h  icons.h
Engine/src/guiComponents/: UI.cpp  UI.h  UIModels.h  UIWindow.cpp  UIWindow.h  colors.h
Engine/src/headers/: ImGui.h  SpriteEngine.h
Engine/src/include/: icons.h  stdExtension.h  stdextension.cpp
Engine/src/light/: lightRepository.cpp  lightRepository.h
Engine/src/manager/: fileDialog.cpp  fileDialog.h  fileDialogs.cpp  fileDialogs.h  folderDialog.cpp  folderDialog.h  fontManager.cpp  fontManager.h  guiRepository.cpp  guiRepository.h  initializer.cpp  initializer.h  lightRepository.cpp  lightRepository.h  saveSystem.cpp  saveSystem.h  spriteRepository.cpp  spriteRepository.h
Engine/src/math/: vector2.cpp
Engine/src/physicalComponents/: camera.cpp  camera.h  gameObject.h  lightSource.cpp  lightSource.h  line.h  sprite.cpp  sprite.h
Engine/src/preCompiledHeaders/: SpriteEngine.h
Engine/src/projectSelector/: projectInfo.h  projectSelector.cpp  projectSelector.h
Engine/src/spriteComponents/: animation.cpp  animation.h  animator.cpp  animator.h  boxCollider.cpp  boxCollider.h  childSystem.cpp  component.h  keyFrame.h  light.cpp  light.h  physicsBody.cpp  physicsBody.h  prefab.cpp  prefab.h  spriteRenderer.cpp  spriteRenderer.h  stransform.h  transform.cpp
Engine/src/textFiles/: addToAssets.txt  plan.txt
Engine/template/: Assets.vcxproj  Assets.vcxproj.filters
Engine/template/saves/: camera.txt  gameWindow.txt  index.txt  sprites.txt
Engine/x64/Debug/: SpriteEngine.exe.recipe  SpriteEngine.vcxproj.FileListAbsolute.txt  UIProjectSelector.nativecodeanalysis.sarif  animation.nativecodeanalysis.sarif  animator.nativecodeanalysis.sarif  boxCollider.nativecodeanalysis.sarif  camera.nativecodeanalysis.sarif  childSystem.nativecodeanalysis.sarif  engineData.nativecodeanalysis.sarif  event.nativecodeanalysis.sarif  fileData.nativecodeanalysis.sarif  fileDialogs.nativecodeanalysis.sarif  fontManager.nativecodeanalysis.sarif  gameObject.nativecodeanalysis.sarif  guiRepository.nativecodeanalysis.sarif  initializer.nativecodeanalysis.sarif  initializer.obj.enc  input.nativecodeanalysis.sarif  line.nativecodeanalysis.sarif  physicsBody.nativecodeanalysis.sarif  prefab.nativecodeanalysis.sarif  renderer.nativecodeanalysis.sarif  saveSystem.nativecodeanalysis.sarif  sprite.nativecodeanalysis.sarif  spriteData.nativecodeanalysis.sarif  spriteRepository.nativecodeanalysis.sarif  spriteengine.obj.enc  vc143.idb
Engine/x64/Release/: SpriteEngine.exe.recipe  SpriteEngine.ipdb  SpriteEngine.vcxproj.FileListAbsolute.txt
(+671 files in other folders)
